# activediff

./: .gitignore  README.md  callbacks.py  config.yaml  config_test.yaml  eval.py  install.sh  pyproject.toml  pyrightconfig.json  setup.py  test_data.pt  test_train.py  train.py  utils.py
activediff/: __init__.py  callbacks.py  eval.py  main.py  meep_compute_fom.py  train.py  utils.py
activediff/algos/: __init__.py
activediff/configs/: config.yaml  config_inference_only.yaml  configold.yaml
activediff/configs/active_learning/: default.yaml  no-select.yaml
activediff/configs/callbacks/: README.md  default.yaml  minimal.yaml
activediff/configs/datamodule/: nanophoto.yaml
activediff/configs/inference/: unet.yaml
activediff/configs/model/: unet.yaml
activediff/configs/train/: unet.yaml
activediff/configs/trainer/: default.yaml
activediff/datamodules/: __init__.py  nanophoto_datamodule.py
activediff/models/: __init__.py  unet.py  unet_utils.py
algos/: unet.py
configs/: config.yaml
configs/datamodule/: nanophoto.yaml
configs/model/: unet.yaml
configs/train/: unet.yaml
datamodules/: nanophoto_datamodule.py
models/: unet.py
scripts/: check_avail_gcloud.sh  connect_gcloud.sh  connect_gcloud_12mars.sh  destroy_gcloud.sh  gcloudimages.txt  init_gcloud_vm.sh  install.sh  launch_gpu.fish  selected_samples_grid.py
tests/: test_meep.py  test_train.py  test_unet.py  test_utils.py
